--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:scss": "node-sass --importer node_modules/node-sass-globbing/index.js src/sass --output dist/assets/css --output-style compressed",
-    "pug": "pug src/pug/index.pug -P -output ./dist/",
-    "watch:scss": "node-sass src/scss/ --output dist/assets/css",
-    "scss:help": "node-sass --help"
+    "pug": "pug src/pug --hierarchy --out ./dist/ --pretty"
   },
   "repository": {
     "type": "git",
@@ -24,6 +22,6 @@
     "node-sass": "^4.9.3",
     "node-sass-globbing": "0.0.23",
     "pug": "^2.0.3",
-    "pug-cli": "^1.0.0-alpha6"
+    "pug-cli": "git+https://github.com/pugjs/pug-cli.git"
   }
 }
