--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:scss": "node-sass --importer node_modules/node-sass-globbing/index.js src/sass --output dist/assets/css --output-style compressed",
     "build:pug": "pug src/pug --hierarchy --out ./dist/ --pretty",
-    "watch": "npm run watch:pug & npm run watch:scss",
+    "watch": "npm-run-all -p watch:*",
     "watch:scss": "node-sass --importer node_modules/node-sass-globbing/index.js src/sass --output dist/assets/css --output-style compressed -w",
     "watch:pug": "pug src/pug --hierarchy --out ./dist/ --pretty -w",
     "dev": "browser-sync start --server ./dist/ --files 'dist/assets/css/*.css, dist/assets/js/*.js, dist/**/*.html'"
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/kf07/npm_script#readme",
   "devDependencies": {
     "browser-sync": "^2.26.0",
+    "concurrently": "^4.0.1",
     "glob": "^7.1.3",
     "node-sass": "^4.9.3",
     "node-sass-globbing": "0.0.23",
+    "npm-run-all": "^4.1.3",
     "pug": "^2.0.3",
     "pug-cli": "git+https://github.com/pugjs/pug-cli.git"
   }
