--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "\"# npm_script\"",
   "main": "index.js",
   "scripts": {
-    "build:scss": "node-sass --importer node_modules/node-sass-globbing/index.js src/sass --output dist/assets/css --output-style compressed",
+    "build:scss": "node-sass --importer node_modules/node-sass-globbing/index.js ./src/sass --output dist/assets/css --output-style compressed",
     "build:pug": "pug src/pug --hierarchy --out ./dist/ --pretty",
     "watch": "npm-run-all -p watch:*",
-    "watch:scss": "node-sass --importer node_modules/node-sass-globbing/index.js src/sass --output dist/assets/css --output-style compressed -w",
+    "watch:scss": "onchange ./src/sass -- npm run build:scss",
     "watch:pug": "pug src/pug --hierarchy --out ./dist/ --pretty -w",
     "dev": "browser-sync start --server ./dist/ --files 'dist/assets/css/*.css, dist/assets/js/*.js, dist/**/*.html'"
   },
@@ -29,6 +29,7 @@
     "node-sass": "^4.9.3",
     "node-sass-globbing": "0.0.23",
     "npm-run-all": "^4.1.3",
+    "onchange": "^5.0.2",
     "pug": "^2.0.3",
     "pug-cli": "git+https://github.com/pugjs/pug-cli.git"
   }
