--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build:scss": "node-sass --importer node_modules/node-sass-globbing/index.js ./src/sass --output dist/assets/css --output-style compressed",
-    "build:pug": "pug src/pug --hierarchy --out ./dist/ --pretty",
+    "build:pug": "pug src/pug --hierarchy --out-dir ./dist/ --pretty",
+    "build:js": "babel src/es6 --out-dir ./dist/assets/js",
     "watch": "npm-run-all -p watch:*",
     "watch:scss": "onchange ./src/sass -- npm run build:scss",
     "watch:pug": "pug src/pug --hierarchy --out ./dist/ --pretty -w",
@@ -23,6 +24,8 @@
   },
   "homepage": "https://github.com/kf07/npm_script#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.26.0",
     "concurrently": "^4.0.1",
     "glob": "^7.1.3",
