--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch:scss": "onchange ./src/sass -- npm run build:scss",
     "watch:pug": "pug src/pug --hierarchy --out ./dist/ --pretty -w",
     "watch:js": "babel src/es6 --out-dir ./dist/assets/js -w",
+    "lint:js": "eslint src/es6/*.js",
     "dev": "browser-sync start --server ./dist/ --files 'dist/assets/css/*.css, dist/assets/js/*.js, dist/**/*.html'"
   },
   "repository": {
@@ -26,9 +27,15 @@
   "homepage": "https://github.com/kf07/npm_script#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.26.0",
     "concurrently": "^4.0.1",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
     "glob": "^7.1.3",
     "node-sass": "^4.9.3",
     "node-sass-globbing": "0.0.23",
