--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "watch:pug": "pug src/pug --hierarchy --out ./dist/ --pretty -w",
     "watch:js": "babel src/es6 --out-dir ./dist/assets/js -w",
     "lint:js": "eslint src/es6/*.js",
+    "watch:lint:js":"esw src/es6/*.js -w",
     "dev": "browser-sync start --server ./dist/ --files 'dist/assets/css/*.css, dist/assets/js/*.js, dist/**/*.html'"
   },
   "repository": {
@@ -34,8 +35,9 @@
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-react": "^7.11.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "^7.11.0",
+    "eslint-watch": "^4.0.2",
     "glob": "^7.1.3",
     "node-sass": "^4.9.3",
     "node-sass-globbing": "0.0.23",
