--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "watch:pug": "pug src/pug --hierarchy --out ./dist/ --pretty -w",
     "watch:js": "babel src/es6 --out-dir ./dist/assets/js -w",
     "lint:js": "eslint src/es6/*.js",
-    "watch:lint:js":"esw src/es6/*.js -w",
+    "watch:lint:js": "esw src/es6/*.js -w",
+    "prettier": "prettier --write src/es6/*.js",
     "dev": "browser-sync start --server ./dist/ --files 'dist/assets/css/*.css, dist/assets/js/*.js, dist/**/*.html'"
   },
   "repository": {
@@ -43,6 +44,7 @@
     "node-sass-globbing": "0.0.23",
     "npm-run-all": "^4.1.3",
     "onchange": "^5.0.2",
+    "prettier": "^1.14.3",
     "pug": "^2.0.3",
     "pug-cli": "git+https://github.com/pugjs/pug-cli.git"
   }
