--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": ["env"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": ">0.25%, not op_mini all"
+      }
+    ],
+    "@babel/preset-flow"
+  ]
 }
