--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:js": "eslint src/es6/*.js",
     "watch:lint:js": "esw src/es6/*.js -w",
     "prettier": "prettier --write src/es6/*.js",
+    "flow": "flow",
     "dev": "browser-sync start --server ./dist/ --files 'dist/assets/css/*.css, dist/assets/js/*.js, dist/**/*.html'"
   },
   "repository": {
@@ -28,6 +29,8 @@
   },
   "homepage": "https://github.com/kf07/npm_script#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-flow": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "babel-preset-env": "^1.7.0",
@@ -35,10 +38,12 @@
     "concurrently": "^4.0.1",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-flowtype": "^3.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "eslint-watch": "^4.0.2",
+    "flow-bin": "^0.83.0",
     "glob": "^7.1.3",
     "node-sass": "^4.9.3",
     "node-sass-globbing": "0.0.23",
